# data-science-model-recreation

./: README.md  main.py  pyproject.toml
data/: classification.py  clustering.py  postgres.py  regression.py
models/attention/: multi_head_self_attention.py  self_attention.py
models/bayesian_attention/: bayesian_linear.py
models/bayesian_neural_network/: bayesian_bnn.ipynb  bayesian_linear.py  bayesian_mlp.py  elbo_regression.py
models/boost/: gbm.py
models/lasso/: regression.py
models/pca/: pca.py
models/ridge/: regression.py
notebook/: attention.ipynb  cross_entropy.ipynb  gbm.ipynb  lasso.ipynb  monte_carlo.ipynb  pca.ipynb  umap.ipynb
