[project]
name = "data-science-01-recreate-models-yourself"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.0",
    "torchvision>=0.23.0",
]
